Added Cross Browser Support.